--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -6,6 +6,8 @@ $page--header-height: 130px;
 $responsive-page--width: 100%;
 $responsive-page--header-height: 80px;
 
+$responsive-break--mobile: 760px;
+
 // Grid
 $gutter-width: 1.5rem !default;
 $element-top-margin: $gutter-width/3 !default;
